Fix scrollbars shown when lazy loading (#85)

--- a/src/components/image/image.scss
+++ b/src/components/image/image.scss
@@ -9,6 +9,10 @@ gx-image {
   align-items: stretch;
   flex: 1;
 
+  &.gx-img-lazyloading {
+    overflow: hidden;
+  }
+
   & > img {
     @include elevation();
     margin-top: var(--margin-top);
